# LightbowGameEngine2

./: .gitignore  README.md
LBGE2/: CMakeLists.txt
LBGE2/BlankTemplate/: CMakeLists.txt  main.cpp
LBGE2/BlankTemplate/Debug/Resources/Objects/: SomeObject.lbgeobj
LBGE2/BlankTemplate/Source/: MainLevel.cpp  MainLevel.h  main.cpp
LBGE2/Engine/: CMakeLists.txt
LBGE2/Engine/Include/: LBGEAudio.h  LBGECore.h  LBGEObjects.h  LBGEShader.h  LBGEStates.h  LBGETypes.h  LBGEUi.h
LBGE2/Engine/Source/Audio/: Audio.cpp  Audio.h  Sound.cpp  Sound.h
LBGE2/Engine/Source/Core/: EventDelegate.cpp  EventDelegate.h  Game.cpp  Game.h  Level.cpp  Level.h  Logger.cpp  Logger.h  Map.cpp  Map.h
LBGE2/Engine/Source/Editor/: ImGuiLayer.cpp  ImGuiLayer.h
LBGE2/Engine/Source/Objects/: LBGEObject.cpp  LBGEObject.h  ObjectManager.cpp  ObjectManager.h  SerializedTypes.h
LBGE2/Engine/Source/Objects/Components/: ObjectComponent.cpp  ObjectComponent.h
LBGE2/Engine/Source/Objects/Components/DefaultComponents/: CppScriptComponent.cpp  CppScriptComponent.h  LuaScriptComponent.cpp  LuaScriptComponent.h  PhysicsComponent.cpp  PhysicsComponent.h
LBGE2/Engine/Source/Shader/: Shader.cpp  Shader.h
LBGE2/Engine/Source/State/: GameState.cpp  GameState.h
LBGE2/Engine/Source/Types/: KeyEvent.h  Vector.h
LBGE2/Engine/Source/UserInterface/: Fonts.cpp  Fonts.h  TextBlock.cpp  TextBlock.h
LBGE2/PongTemplate/: CMakeLists.txt  main.cpp
LBGE2/PongTemplate/Resources/Levels/: mylevel.lbgelvl
LBGE2/PongTemplate/Source/Levels/: PongMenuLevel.cpp  PongMenuLevel.h  PongPlayingLevel.cpp  PongPlayingLevel.h
LBGE2/PongTemplate/Source/Objects/: Ball.cpp  Ball.h  Player.cpp  Player.h
LBGE2/PongTemplate/Source/States/: PongMenuState.cpp  PongMenuState.h
